--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,43 +5,73 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800" >
-    <Grid Background="#E7EDEF">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="4*"></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid>
-            <Canvas>
-                
-                <TextBox Canvas.Right="0" Canvas.Top="30" Width="250" Height="50" FontSize="20" VerticalContentAlignment="Center">
-                    <TextBox.Resources>
-                        <Style TargetType="{x:Type Border}">
-                            <Setter Property="CornerRadius" Value="20"/>
-                        </Style>
-                    </TextBox.Resources>
-                </TextBox>
-                
-                <Button Height="40" Width="40" Canvas.Right="10" Canvas.Top="35" Background="Transparent" BorderThickness="0">
-                    <Image Source="images\search_64.png"></Image>
-                    <Button.Resources>
-                        <Style TargetType="Border">
-                            <Setter Property="CornerRadius" Value="20"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
-                <Image Width="70" Height="70" Margin="10" Source="images\logo.png"></Image>
-            </Canvas>
-        </Grid>
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"></ColumnDefinition>
-                <ColumnDefinition Width="6*"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <Grid Name="LeftMenu_Grid" >
-                <WrapPanel Name="LeftMenu_WrapPanel">
-                    <Label Margin="10,0,10,0" Content="Products" FontWeight="Bold"  FontSize="20"></Label>
-                    <Button FontSize="20" 
+        Title="MainWindow" Height="600" Width="800" WindowStyle="None">
+    <Grid Background="#E7EDEF" Name="MainGrid">
+        
+        <Grid x:Name="SecondMainGrid">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="4*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid>
+
+                <Canvas x:Name="Canvas" >
+                    <Button ToolTip="Close"
+                        Click="CloseButton_Click" 
+                        Name="CloseButton" Height="40" Width="40" Canvas.Right="0" Background="Transparent" BorderThickness="0">
+                        <Image Source="images\close.png"></Image>
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="20"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+
+                    <TextBox Name="SearchTxtBox" 
+                         Canvas.Right="70"
+                         Canvas.Top="50" 
+                         Width="250" Height="50" FontSize="20" VerticalContentAlignment="Center"
+                         Text="Search Product"
+                         Foreground="Gray"
+                         
+                         GotFocus="SearchTxtBox_GotFocus"
+                         LostFocus="SearchTxtBox_LostFocus"
+                         >
+                        <TextBox.Resources>
+                            <Style TargetType="{x:Type Border}">
+                                <Setter Property="CornerRadius" Value="15"/>
+                            </Style>
+                        </TextBox.Resources>
+                    </TextBox>
+
+                    <Button Name="SearchButton" Height="40" Width="40" Canvas.Right="70" Canvas.Top="55" Background="Transparent" BorderThickness="0">
+                        <Image Source="images\search_64.png"></Image>
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="20"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                    <Button Click="AddProductButton_Click" ToolTip="Add Your Product"  Name="AddProductButton"  Height="40" Width="40" Canvas.Right="10" Canvas.Top="55" Background="Transparent" BorderThickness="0">
+                        <Image Source="images\Add.png"></Image>
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="20"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+                    <Image Width="70" Height="70" Margin="10" Source="images\logo.png" MouseDown="Grid_MouseRightButtonDown"></Image>
+                </Canvas>
+            </Grid>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                    <ColumnDefinition Width="6*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid Name="LeftMenu_Grid" >
+                    <WrapPanel Name="LeftMenu_WrapPanel">
+                        <Label Margin="10,0,10,0" Content="Products" FontWeight="Bold"  FontSize="20"></Label>
+                        <Button FontSize="20" 
                             Content="All"
                             Width="115"
                             Height="30"
@@ -50,7 +80,7 @@
                             Foreground="Gray"
                             Click="Button_Click"
                             ></Button>
-                    <Button FontSize="20" 
+                        <Button FontSize="20" 
                             Content="Bikes"
                             Width="115"
                             Height="30"
@@ -58,7 +88,7 @@
                             BorderThickness="0"
                             Foreground="Gray"
                             Click="Button_Click"></Button>
-                    <Button FontSize="20" 
+                        <Button FontSize="20" 
                             Content="Frames"
                             Width="115"
                             Height="30"
@@ -66,7 +96,7 @@
                             BorderThickness="0"
                             Foreground="Gray"
                             Click="Button_Click"></Button>
-                    <Button FontSize="20" 
+                        <Button FontSize="20" 
                             Content="Wheels"
                             Width="115"
                             Height="30"
@@ -74,7 +104,7 @@
                             BorderThickness="0"
                             Foreground="Gray"
                             Click="Button_Click"></Button>
-                    <Button FontSize="20" 
+                        <Button FontSize="20" 
                             Content="Steering"
                             Width="115"
                             Height="30"
@@ -82,7 +112,7 @@
                             BorderThickness="0"
                             Foreground="Gray"
                             Click="Button_Click"></Button>
-                    <Button FontSize="20" 
+                        <Button FontSize="20" 
                             Content="Clothing"
                             Width="115"
                             Height="30"
@@ -90,7 +120,7 @@
                             BorderThickness="0"
                             Foreground="Gray"
                             Click="Button_Click"></Button>
-                    <Button FontSize="20" 
+                        <Button FontSize="20" 
                             Content="Drivechain"
                             Width="115"
                             Height="30"
@@ -98,7 +128,7 @@
                             BorderThickness="0"
                             Foreground="Gray"
                             Click="Button_Click"></Button>
-                    <Button FontSize="20" 
+                        <Button FontSize="20" 
                             Content="Misc"
                             Width="115"
                             Height="30"
@@ -106,7 +136,7 @@
                             BorderThickness="0"
                             Foreground="Gray"
                             Click="Button_Click"></Button>
-                    <Button FontSize="20" 
+                        <Button FontSize="20" 
                             Content="Sale"
                             Width="115"
                             Height="30"
@@ -114,18 +144,20 @@
                             BorderThickness="0"
                             Foreground="Gray"
                             Click="Button_Click"></Button>
-                </WrapPanel>
-            </Grid>
-            
-            <Grid Grid.Column="1">
 
-                <ListView>
-                    <Label Width="100" Height="50" Content="Hello" FontSize="25"></Label>
-                    <Label Width="100" Height="50" Content="Hello" FontSize="25"></Label>
-                    <Label Width="100" Height="50" Content="Hello" FontSize="25"></Label>
-                </ListView>
+                    </WrapPanel>
+                </Grid>
+
+                <Grid Grid.Column="1">
+                    <WrapPanel Name="ProductsMenu_WrapPanel">
+                        
+                        
+
+                    </WrapPanel>
+                </Grid>
             </Grid>
         </Grid>
+        
 
     </Grid>
 </Window>
