--- a/WpfApp1/UserControls/Products.xaml
+++ b/WpfApp1/UserControls/Products.xaml
@@ -8,9 +8,9 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="0,0,629,279" Background="White">
         <Canvas>
-            <Image Name="ProductImage" Canvas.Right="40" Canvas.Bottom="70" Width="90" Height="90" ></Image>
-            <Label Name="ProductName" Canvas.Bottom="40" FontSize="15" Content="Name" Width="170" ></Label>
-            <Label Name="ProductPrice" Content="Price" FontSize="12"
+            <Image Name="ProductImage" Canvas.Right="40" Canvas.Bottom="70" Width="90" Height="90" Source="{Binding }"></Image>
+            <Label Name="ProductName" Canvas.Bottom="40" FontSize="15" Width="170" ></Label>
+            <Label Name="ProductPrice" FontSize="12"
                    Canvas.Bottom="15" FontWeight="Light" Foreground="Gray"></Label>
         </Canvas>
     </Grid>
